--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "config": {
     "root": "public/",
-    "pug_files": "src/pug/index.pug",
+    "pug_files": "src/pug/index.pug src/pug/free.pug",
     "postcss_files": "src/css/style.css"
   },
   "scripts": {
